# wma-cross-alerts

./: .env  .env.example  .env.save  .env.save.1  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/events/golden_cross_wma/nasdaq100/HON/: 2026-01-15_HON_golden_cross_wma.json
data/events/golden_cross_wma/nasdaq100/PEP/: 2026-01-16_PEP_golden_cross_wma.json
data/events/golden_cross_wma/nasdaq100/SBUX/: 2026-01-13_SBUX_golden_cross_wma.json
data/events/golden_cross_wma/nasdaq100/SNPS/: 2026-01-13_SNPS_golden_cross_wma.json
data/events/golden_cross_wma/nasdaq100/TXN/: 2026-01-13_TXN_golden_cross_wma.json
data/events/golden_cross_wma/sp500/AOS/: 2026-01-14_AOS_golden_cross_wma.json
data/events/golden_cross_wma/sp500/BLK/: 2026-01-15_BLK_golden_cross_wma.json
data/universes/: nasdaq100.json  sp500.json
etc/: flujo.md
logs/: app.log.2026-01-06  app.log.2026-01-13
scripts/: README.md  debug_persistence.py  plot_full_history.py  resend_alerts.py  resend_alerts_range.py  revalidate_range.sh  run_wma_alerts.sh  run_wma_range.py
src/wma_cross_alerts/: main.py
src/wma_cross_alerts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wma_cross_alerts/core/: settings.py  universe.py
src/wma_cross_alerts/data_sources/: yahoo.py
src/wma_cross_alerts/indicators/: wma.py
src/wma_cross_alerts/notifiers/: email.py
src/wma_cross_alerts/persistence/: storage.py
src/wma_cross_alerts/reporting/: plotter.py
src/wma_cross_alerts/signals/: golden_cross_wma.py
src/wma_cross_alerts/utils/: logger.py
(+31 files in other folders)
